--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.0",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
