--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
+    "react-speech-kit": "^3.0.1",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
