--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.8",
+    "framer-motion": "^12.12.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
