--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm install --legacy-peer-deps && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,7 +17,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
-    "react-speech-kit": "^3.0.1",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
